--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.christuniversity">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -9,6 +8,9 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,22 +21,23 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
+        <activity android:name=".Passenger_ride_list"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".MapsActivity2"
-            android:label="@string/title_activity_maps2"></activity>
-        <!--<activity android:name=".PermissionsActivity1" />-->
+        <activity android:name=".MapsActivity2" /> <!-- <activity android:name=".PermissionsActivity1" /> -->
         <activity android:name=".MapsActivity" /> <!-- <activity android:name=".PaymentActivity" /> -->
         <activity android:name=".Main2Activity" />
         <!--
@@ -48,15 +51,19 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".Driver_window" />
-        <activity android:name=".Registration" />
-        <activity android:name=".Homepage" />
+        <!--<activity android:name=".Registration" />-->
+        <!--<activity android:name=".Homepage" />-->
         <activity android:name=".Passenger_home" />
         <activity
             android:name=".MapActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".PermissionsActivity" />
-        <!--<activity android:name=".MainActivity">-->
-        <activity android:name=".PermissionsActivity1" >
+        <!-- <activity android:name=".PermissionsActivity"> -->
+        <activity android:name=".PermissionsActivity1"/>
+        <activity android:name=".Registration" />
+        <activity android:name=".Homepage" />
+        <activity android:name=".MainActivity">
+        <!--    <activity android:name=".Registration" >-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
