--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-/*
 apply plugin: 'com.android.application'
 
 android {
@@ -29,11 +28,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
-    //implementation 'com.google.android.gms:play-services-places:16.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    //implementation 'com.google.android.gms:play-services-location:11.4.0'
 
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.libraries.places:places:1.1.0'
+
+    //implementation 'com.google.android.libraries.places:places:2.0.0'
+
+
+    //implementation 'com.google.android.libraries.places.widget.AutocompleteSupportFragment'
+
 
     //implementation 'com.google.android.gms:play-services:11.4.0'
     implementation 'com.karumi:dexter:5.0.0'
@@ -59,8 +64,8 @@ dependencies {
     //compile 'com.squareup.retrofit2:retrofit:2.3.0'
     //compile 'com.squareup.retrofit2:converter-gson:2.2.0'
 
-    //implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    //implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
 
     //Material Edit Text
     //implementation 'com.rengwuxian.materialedittext:library:2.1.4'
@@ -72,98 +77,12 @@ dependencies {
     //implementation 'com.github.material-components:material-components-android:1.0.0'
 
 
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.basgeekball:awesome-validation:1.3'
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
-
 }
-*/
-
-apply plugin: 'com.android.application'
-
-android {
-    compileSdkVersion 28
-    defaultConfig {
-        applicationId "com.example.christuniversity"
-        minSdkVersion 16
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        useLibrary 'org.apache.http.legacy'
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'com.android.support:design:28.0.0'
-    //implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'eu.inmite.android.lib:android-validation-komensky:0.9.4@aar'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    //implementation 'com.google.android.gms:play-services-places:16.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    //implementation 'com.google.android.gms:play-services-location:11.4.0'
-
-    implementation 'com.google.android.libraries.places:places:1.1.0'
-
-    //implementation 'com.google.android.gms:play-services:11.4.0'
-    implementation 'com.karumi:dexter:5.0.0'
-    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
-    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
-    //RxJava
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
-
-    //Retrofit
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
-
-    implementation('com.paytm:pgplussdk:1.3.3') {
-        transitive = true;
-    }
-
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.7.0'
-
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
-    //compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    //compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-
-    //implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    //implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
-
-    //Material Edit Text
-    //implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-
-    //Material Dialog
-    //implementation 'com.github.javiersantos:MaterialStyledDialogs:2.1'
-
-    //Material Button
-    //implementation 'com.github.material-components:material-components-android:1.0.0'
-
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.basgeekball:awesome-validation:1.3'
-
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
-}
-
