request list done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".HelpActivity"></activity>
+        <activity android:name=".RequestrideActivity"></activity>
+        <activity android:name=".HelpActivity" />
         <activity android:name=".RiderequestActivity" />
 
         <provider
@@ -66,7 +67,7 @@
         <activity android:name=".Homepage" />
         <activity android:name=".MainActivity">
 
-        <!--<activity android:name=".Homepage" >-->
+            <!-- <activity android:name=".Homepage" > -->
             <!-- <activity android:name=".Registration" > -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
