--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,5 +84,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.basgeekball:awesome-validation:1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
 
 }
