--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
     implementation 'com.basgeekball:awesome-validation:1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
 
+    implementation 'com.hudomju:swipe-to-dismiss-undo:1.0'
+
 }
