--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".RequestrideActivity"></activity>
+        <activity android:name=".OtpActivity"></activity>
+        <activity android:name=".RequestrideActivity" />
         <activity android:name=".HelpActivity" />
         <activity android:name=".RiderequestActivity" />
 
